@@ -57,7 +57,6 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <argLine>--enable-preview @{argLine}</argLine>
                     <additionalClasspathElements>
                         <additionalClasspathElement>${project.basedir}/target/virtdata-userlibs-${project.version}.jar
                         </additionalClasspathElement>
